Finished major part of animation - resolving loops

--- a/index.html
+++ b/index.html
@@ -16,13 +16,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home</a>
+              <a class="nav-link" href="./index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./own.html">Own animation</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./animation.html"> Toroid to mug </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./resolve_loops_animation.html"> Hooked rings to separate loops </a>
             </li>
           </ul>
         </div>
