=Added basic viewer and basic Mobius strip animation

--- a/animation.html
+++ b/animation.html
@@ -24,7 +24,7 @@
               <a class="nav-link" href="./own.html">Own animation</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./animation.html"> Toroid to mug </a>
+              <a class="nav-link" href="./animation.html"> Torus to mug </a>
             </li>
           </ul>
         </div>
